--- a/index.html
+++ b/index.html
@@ -1,77 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Recipe page</title>
+    <title>Frontend Mentor | Recipe page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  Simple Omelette Recipe
+  <body>
+    <div class="card">
+      <div class="top_image">
+        <img
+          src="./assets/images/image-omelette.jpeg"
+          alt="Beautiful picture of the meal"
+        />
+      </div>
+      <div class="recipe_content">
+        <div class="recipe_title_section">
+          <div class="recipe_title"><h1>Simple Omelette Recipe</h1></div>
+          <div class="recipe_description">
+            An easy and quick dish, perfect for any meal. This classic omelette
+            combines beaten eggs cooked to perfection, optionally filled with
+            your choice of cheese, vegetables, or meats.
+          </div>
+        </div>
+        <div class="recipe_preparation_section">
+          <div class="preparation_time_title">Preparation time</div>
+          <div class="preparation_time_detail">
+            <ul>
+              <li>
+                <span class="bold_list">Total: </span>Approximately 10 minutes
+              </li>
+              <li><span class="bold_list">Preparation: </span>5 minutes</li>
+              <li><span class="bold_list">Cooking: </span>5 minutes</li>
+            </ul>
+          </div>
+        </div>
+        <div class="recipe_ingredient_section">
+          <div class="section_title">Ingredients</div>
+          <div class="ingredients_detail">
+            <ul>
+              <li>2-3 large eggs</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </li>
+            </ul>
+          </div>
+        </div>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-
-  Preparation time
-
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
-
-  Ingredients
-
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <div class="line_separation"></div>
+        <div class="recipe_instruction_section">
+          <div class="section_title">Instructions</div>
+          <div class="instructions_details">
+            <ol>
+              <li>
+                <span class="bold_list">Beat the eggs: </span>In a bowl, beat
+                the eggs with a pinch of salt and pepper until they are well
+                mixed. You can add a tablespoon of water or milk for a fluffier
+                texture.
+              </li>
+              <li>
+                <span class="bold_list">Heat the pan: </span>Place a non-stick
+                frying pan over medium heat and add butter or oil.
+              </li>
+              <li>
+                <span class="bold_list">Cook the omelette: </span>Once the
+                butter is melted and bubbling, pour in the eggs. Tilt the pan to
+                ensure the eggs evenly coat the surface.
+              </li>
+              <li>
+                <span class="bold_list">Add fillings (optional): </span>When the
+                eggs begin to set at the edges but are still slightly runny in
+                the middle, sprinkle your chosen fillings over one half of the
+                omelette.
+              </li>
+              <li>
+                <span class="bold_list">Fold and serve: </span>As the omelette
+                continues to cook, carefully lift one edge and fold it over the
+                fillings. Let it cook for another minute, then slide it onto a
+                plate.
+              </li>
+              <li>
+                <span class="bold_list">Enjoy: </span>Serve hot, with additional
+                salt and pepper if needed.
+              </li>
+            </ol>
+          </div>
+        </div>
+        <div class="line_separation"></div>
+        <div class="recipe_nutrition_section">
+          <div class="section_title">Nutrition</div>
+          <div class="nutrition_detail">
+            <div class="recipe_description">
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </div>
+          </div>
+          <div class="nutrition_table">
+            <div class="nutrition_table_line">
+              <div class="table_line_category">Calories</div>
+              <div class="table_line_values">277kcal</div>
+            </div>
+            <div class="line_separation"></div>
+            <div class="nutrition_table_line">
+              <div class="table_line_category">Carbs</div>
+              <div class="table_line_values">0g</div>
+            </div>
+            <div class="line_separation"></div>
+            <div class="nutrition_table_line">
+              <div class="table_line_category">Protein</div>
+              <div class="table_line_values">20g</div>
+            </div>
+            <div class="line_separation"></div>
+            <div class="nutrition_table_line">
+              <div class="table_line_category">Fat</div>
+              <div class="table_line_values">22g</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
