V1 Ready to be published
I still need to write the Readme

--- a/index.html
+++ b/index.html
@@ -16,24 +16,25 @@
   </head>
 
   <body>
-    <div class="card">
-      <div class="top_image">
+    <article class="card">
+      <figure class="top_image">
         <img
           src="./assets/images/image-omelette.jpeg"
           alt="Beautiful picture of the meal"
         />
-      </div>
-      <div class="recipe_content">
-        <div class="recipe_title_section">
+      </figure>
+      <main class="recipe_content">
+        <section class="recipe_title_section">
           <div class="recipe_title"><h1>Simple Omelette Recipe</h1></div>
           <div class="recipe_description">
             An easy and quick dish, perfect for any meal. This classic omelette
             combines beaten eggs cooked to perfection, optionally filled with
             your choice of cheese, vegetables, or meats.
           </div>
-        </div>
-        <div class="recipe_preparation_section">
-          <div class="preparation_time_title">Preparation time</div>
+        </section>
+
+        <section class="recipe_preparation_section">
+          <div class="preparation_time_title"><h3>Preparation time</h3></div>
           <div class="preparation_time_detail">
             <ul>
               <li>
@@ -43,9 +44,10 @@
               <li><span class="bold_list">Cooking: </span>5 minutes</li>
             </ul>
           </div>
-        </div>
-        <div class="recipe_ingredient_section">
-          <div class="section_title">Ingredients</div>
+        </section>
+
+        <section class="recipe_ingredient_section">
+          <div class="section_title"><h2>Ingredients</h2></div>
           <div class="ingredients_detail">
             <ul>
               <li>2-3 large eggs</li>
@@ -57,11 +59,12 @@
               </li>
             </ul>
           </div>
-        </div>
+        </section>
 
         <div class="line_separation"></div>
-        <div class="recipe_instruction_section">
-          <div class="section_title">Instructions</div>
+
+        <section class="recipe_instruction_section">
+          <div class="section_title"><h2>Instructions</h2></div>
           <div class="instructions_details">
             <ol>
               <li>
@@ -97,10 +100,12 @@
               </li>
             </ol>
           </div>
-        </div>
+        </section>
+
         <div class="line_separation"></div>
-        <div class="recipe_nutrition_section">
-          <div class="section_title">Nutrition</div>
+
+        <section class="recipe_nutrition_section">
+          <div class="section_title"><h2>Nutrition</h2></div>
           <div class="nutrition_detail">
             <div class="recipe_description">
               The table below shows nutritional values per serving without the
@@ -128,8 +133,8 @@
               <div class="table_line_values">22g</div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
+        </section>
+      </main>
+    </article>
   </body>
 </html>
