I switched article and main to clean up my code

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   </head>
 
   <body>
-    <article class="card">
+    <main class="card">
       <figure class="top_image">
         <img
           src="./assets/images/image-omelette.jpeg"
           alt="Beautiful picture of the meal"
         />
       </figure>
-      <main class="recipe_content">
+      <article class="recipe_content">
         <section class="recipe_title_section">
           <div class="recipe_title"><h1>Simple Omelette Recipe</h1></div>
           <div class="recipe_description">
@@ -134,7 +134,7 @@
             </div>
           </div>
         </section>
-      </main>
-    </article>
+      </article>
+    </main>
   </body>
 </html>
